--- a/shellc/development.ini
+++ b/shellc/development.ini
@@ -52,7 +52,7 @@ handlers =
 qualname = shellc
 
 [logger_sqlalchemy]
-level = INFO
+level = WARN
 handlers =
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
